proj2/test/test_11712009_5.spl
int main(int a, int b) {
    int f = a[0];
}

int main() {}
